# DCMTK

./: CMakeLists.txt  README.ctk  README.md  osconfig.h.in  png.h.in
CMake/: 3rdparty.cmake  CheckFunctionWithHeaderExists.cmake  DCMTKConfig.cmake.in  GenerateDCMTKConfigure.cmake  KitCommonBlock.cmake  UseDCMTK.cmake  dcmtkAfterModules.cmake  dcmtkMacros.cmake  dcmtkPrepare.cmake
config/: Makefile.def.in
dcmdata/: CMakeLists.txt
dcmdata/apps/: CMakeLists.txt
dcmdata/libi2d/: CMakeLists.txt
dcmdata/libsrc/: CMakeLists.txt  dctagkey.cc
dcmdata/tests/: CMakeLists.txt
dcmimage/: CMakeLists.txt
dcmimage/apps/: CMakeLists.txt
dcmimage/include/dcmtk/dcmimage/: diargpxt.h  dicmypxt.h  dicocpt.h  dicoflt.h  dicorot.h  dicosct.h  dihsvpxt.h  dipalpxt.h  dirgbpxt.h  diybrpxt.h  diyf2pxt.h  diyp2pxt.h
dcmimage/libsrc/: CMakeLists.txt
dcmimgle/: CMakeLists.txt
dcmimgle/apps/: CMakeLists.txt  dcod2lum.cc
dcmimgle/include/dcmtk/dcmimgle/: diflipt.h  dimoflt.h  dimoipxt.h  dimorot.h  dimosct.h  dirotat.h  discalet.h
dcmimgle/libsrc/: CMakeLists.txt  diciefn.cc  digsdfn.cc
dcmiod/include/dcmtk/dcmiod/: iodimage.h
dcmjpeg/: CMakeLists.txt
dcmjpeg/apps/: CMakeLists.txt
dcmjpeg/libijg12/: CMakeLists.txt  jmorecfg12.h
dcmjpeg/libijg16/: CMakeLists.txt  jmorecfg16.h
dcmjpeg/libijg8/: CMakeLists.txt  jmorecfg8.h
dcmjpeg/libsrc/: CMakeLists.txt  djdijg12.cc  djdijg16.cc  djdijg8.cc  djeijg12.cc  djeijg16.cc  djeijg8.cc
dcmnet/: CMakeLists.txt
dcmnet/apps/: CMakeLists.txt
dcmnet/include/dcmtk/dcmnet/: scu.h
dcmnet/libsrc/: CMakeLists.txt  dccfuidh.cc  scu.cc
dcmpstat/: CMakeLists.txt
dcmpstat/apps/: CMakeLists.txt
dcmpstat/libsrc/: CMakeLists.txt
dcmpstat/tests/: CMakeLists.txt
dcmqrdb/: CMakeLists.txt
dcmqrdb/apps/: CMakeLists.txt
dcmqrdb/libsrc/: CMakeLists.txt  dcmqrcnf.cc
dcmrt/tests/: CMakeLists.txt
dcmseg/include/dcmtk/dcmseg/: segdoc.h
dcmseg/libsrc/: segdoc.cc
dcmsign/: CMakeLists.txt
dcmsign/apps/: CMakeLists.txt
dcmsign/libsrc/: CMakeLists.txt  siprivat.cc
dcmsr/: CMakeLists.txt
dcmsr/apps/: CMakeLists.txt
dcmsr/include/dcmtk/dcmsr/: dsrdocst.h
dcmsr/libcmr/: CMakeLists.txt
dcmsr/libsrc/: CMakeLists.txt
dcmsr/tests/: CMakeLists.txt
dcmtls/: CMakeLists.txt
dcmtls/libsrc/: CMakeLists.txt
dcmwlm/: CMakeLists.txt
dcmwlm/libsrc/: CMakeLists.txt
doxygen/: htmldocs.cfg  manpages.cfg
oflog/: CMakeLists.txt
oflog/include/dcmtk/oflog/spi/: logevent.h
oflog/libsrc/: CMakeLists.txt  hierarchy.cc  threads.cc  timehelp.cc  winsock.cc
ofstd/: CMakeLists.txt
ofstd/include/dcmtk/ofstd/: ofoset.h
ofstd/libsrc/: CMakeLists.txt  ofconapp.cc  oflist.cc  ofthread.cc  oftime.cc
ofstd/tests/: CMakeLists.txt
